--- a/src/main/resources/error.messages.properties
+++ b/src/main/resources/error.messages.properties
@@ -6,7 +6,8 @@ error.rename-file=Unable to rename file
 error.upload-file=Unable to upload file
 error.delete-file=Unable to delete file
 error.internal=Internal server error
-error.validation=Unable to validate input data. 
+error.validation=Invalid input data. 
 error.security-invalid-username= Security context authentication: invalid username
 error.json-processing=Unable to create an instance for deserialization from a string value
-
+error.jwt-start-bearer=Make sure that token starts with 'Bearer '
+error.jwt-blacklisted=Logout was previously executed. Jwt is blacklisted.
